5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1618_2918.log
== TEST (2019-04-02 11:12:50) 
-- CODE:
pvii = float(input("Insira o preco do valor integral do ingresso: "))  #pvii = valor do igresso
qi = int(input("Insira a quantidade de ingressos: "))                  #qi = quantidade de ingrgessos

vtc = pvii * qi

print(round(vtc, 2))
-- OUTPUT:
142.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:13:43) 
-- CODE:
pvii = float(input("Insira o preco do valor integral do ingresso: "))  #pvii = valor do igresso
qi = int(input("Insira a quantidade de ingressos: "))                  #qi = quantidade de ingrgessos

promocao = pvii * (20/100)

vtc = promocao * qi

print(round(vtc, 2))
-- OUTPUT:
28.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:14:59) 
-- CODE:
pvii = float(input("Insira o preco do valor integral do ingresso: "))  #pvii = valor do igresso
qi = int(input("Insira a quantidade de ingressos: "))                  #qi = quantidade de ingrgessos

promocao = pvii / 100

vtc = promocao * qi

print(round(vtc, 2))
-- OUTPUT:
1.42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:16:54) 
-- CODE:
pvii = float(input("Insira o preco do valor integral do ingresso: "))  #pvii = valor do igresso
qi = int(input("Insira a quantidade de ingressos: "))                  #qi = quantidade de ingrgessos

promocao = pvii * (20 / 100)
precoPromocional = pvii - promocao
vtc = precoPomocional * qi

print(round(vtc, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    vtc = precoPomocional * qi
NameError: name 'precoPomocional' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:17:11) 
-- CODE:
pvii = float(input("Insira o preco do valor integral do ingresso: "))  #pvii = valor do igresso
qi = int(input("Insira a quantidade de ingressos: "))                  #qi = quantidade de ingrgessos

promocao = pvii * (20 / 100)
precoPromocional = pvii - promocao
vtc = precoPromocional * qi

print(round(vtc, 2))
-- OUTPUT:
114.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:19:07) 
-- CODE:
pvii = float(input("Insira o preco do valor integral do ingresso: "))  #pvii = valor do igresso
qi = int(input("Insira a quantidade de ingressos: "))                  #qi = quantidade de ingrgessos

promocao = pvii * (20 / 100)                          # promocao de 20%
precoPromocional = pvii - promocao                    # preco promocional 
vtc = precoPromocional * qi                           # valor total da compra

print(round(vtc, 2))
-- OUTPUT:
114.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:19:19) 
-- CODE:
pvii = float(input("Insira o preco do valor integral do ingresso: "))  #pvii = valor do igresso
qi = int(input("Insira a quantidade de ingressos: "))                  #qi = quantidade de ingrgessos

promocao = pvii * (20 / 100)                          # promocao de 20%
precoPromocional = pvii - promocao                    # preco promocional 
vtc = precoPromocional * qi                           # valor total da compra

print(round(vtc, 2))
-- EXECUTION TIME:
0.155794
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
114.0
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
101.81
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
